--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "author": "",
   "license": "ISC",
+  "start":"ñode index.js",
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
